fix font sizes on mobile

--- a/styles.css
+++ b/styles.css
@@ -479,8 +479,19 @@ body {
     .ybile {
         overflow: hidden;
     }
+
+
     body {
         font-size: 10px;
+    }
+
+   .airports {
+        font-size:12px;
+
+    }
+
+    #picker {
+        font-size:1em;
     }
     #soundcloud_player_iframe {
         max-width: 100%;
@@ -503,8 +514,11 @@ body {
     .ybile-r2 {
         max-width: 300px;
     }
+
     .ybile-r3 {
-        letter-spacing: 5.8px;
+        letter-spacing: 4.5px;
+        font-weight:400;
+        font-size:13px;
     }
     .airport-info {
         max-width: 300px;
@@ -537,7 +551,7 @@ body {
         max-width: 300px;
     }
     .ybile-r3 {
-        letter-spacing: 5.8px;
+        letter-spacing: 4.5px;
     }
     .airport-info {
         max-width: 300px;
@@ -545,6 +559,10 @@ body {
     }
     .thankyoutext {
         font-size: 12px;
+    }
+       .airports {
+        font-size:12px;
+
     }
 }
 @media all and (max-width: 500px) {
@@ -555,11 +573,17 @@ body {
         max-width: 300px;
     }
     .ybile-r3 {
-        letter-spacing: 5.8px;
+        letter-spacing: 4.5px;
+        font-weight:400;
+        font-size:13px;
     }
     .airport-info {
         max-width: 300px;
         font-size: 12px;
+    }
+       .airports {
+        font-size:12px;
+
     }
 }
 @keyframes pulse {
